--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -9,8 +9,8 @@ hook_add = '''
   let g:jellybeans_use_gui_italics = 0
   let g:jellybeans_overrides = {
   \   'background': { 'guibg': '000000' },
-  \   'SpecialKey': { 'guifg': '303030', 'guibg': '000000' },
-  \   'NonText':    { 'guifg': '303030', 'guibg': '000000' },
+  \   'SpecialKey': { 'guifg': '303030', 'guibg': '', 'ctermbg': '' },
+  \   'NonText':    { 'guifg': '303030', 'guibg': '', 'ctermbg': '' },
   \ }
   autocmd myinit VimEnter * nested colorscheme jellybeans
   " vimdiffの色設定
