--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -31,6 +31,12 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'roxma/nvim-yarp'
+
+[[plugins]]
+repo = 'roxma/vim-hug-neovim-rpc'
+
+[[plugins]]
 repo = 'Shougo/denite.nvim'
 hook_add = '''
   " s で split
