Vim: Add plugin(ctrlp)

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -151,6 +151,25 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'ctrlpvim/ctrlp.vim'
+depends = [
+  'mattn/ctrlp_matchfuzzy',
+]
+hook_add = '''
+  let g:ctrlp_working_path_mode = 'd'
+  let g:ctrlp_clear_cache_on_exit = 0
+  let g:ctrlp_custom_ignore = {
+  \ 'dir':  '\v[\/](\.git|\.svn|\.hg|test)$',
+  \ 'file': '\v\.(exe|so|dll|o|obj|lib|d|s|lst|i|bak)$',
+  \ }
+  let g:ctrlp_max_files = 0
+  let g:ctrlp_match_func = {'match': 'ctrlp_matchfuzzy#matcher'}
+'''
+
+[[plugins]]
+repo = 'mattn/ctrlp-matchfuzzy'
+
+[[plugins]]
 repo = 'tpope/vim-fugitive'
 hook_add = '''
   nnoremap [git]  <Nop>
